Simplified method